<resources>
    <string name="app_name">GuessGame</string>

    <string name="take_a_guess">Take a guess</string>
    <string name="new_game">New game</string>
    <string name="times_guessed">Times guessed: </string>
    <string name="best_score">Best Score: </string>
    <string name="write_number">Write number </string>
    <string name="reset_score">Reset score </string>
    <string name="music">music</string>
    <string name="set_new_game">New game</string>
    <string name="help">Help</string>
    <string name="help_informations">I drawed a number between 0 and 99.</string>
    <string name="help_informations2">Now you have to guess, what is my number.</string>
    <string name="help_informations3">I will tell you if it\'s smaller or larger then yours!</string>
</resources>
