<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anna.guessgame.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guess my number!"
        android:layout_marginTop="15dp"
        android:id="@+id/text_guess_number"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textColor="#8bc34a" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:id="@+id/editText"
            android:inputType="number"
            android:hint="@string/write_number"
            android:ems="10"
            android:maxLength="2" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_guess"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/guess"
            android:onClick="takeAGuess"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_guessed"
        android:id="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="#000000" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/times"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_score"
        android:id="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/score"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_marginLeft="10dp"
        android:id="@+id/new_game"
        android:onClick="newGame"

        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="music"
            android:layout_marginLeft="20dp"
            android:id="@+id/textView3" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="switchMusic"
            android:id="@+id/switchMusic"
            android:layout_marginLeft="5dp"
            android:checked="false" />

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu"
        android:layout_marginLeft="10dp"
        android:id="@+id/button" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


</RelativeLayout>

</LinearLayout>
